Change image for Kirby Cookies recipe page. Fix relative path to kirby-cookies.jpg on kirby-cookies.html. Add description, ingredients, and instructions on the kirby-cookies.html page.

--- a/recipes/kirby-cookies.html
+++ b/recipes/kirby-cookies.html
@@ -8,7 +8,24 @@
 
     <body>
         <h1>Cookies</h1>
-        
-        
+        <img src="../images/kirby-cookies.jpg" alt="A plate of cookies in the shape of the video game character Kirby." width="704" height="960">
+
+        <h2>Description</h2>
+        <p>Delicious sugar cookies in the shape of Nintendo's famous pink blob and friends.</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Flour</li>
+            <li>Sugar</li>
+            <li>...</li>
+        </ul>
+
+        <h3>Instructions</h3>
+        <ol>
+            <li>Put in bowl.</li>
+            <li>Mix</li>
+            <li>Bake...</li>
+            <li>Enjoy!</li>
+        </ol>
     </body>
 </html>
