--- a/recipes/kirby-cookies.html
+++ b/recipes/kirby-cookies.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>Cookies</h1>
+        <h1>Kirby Cookies</h1>
         <img src="../images/kirby-cookies.jpg" alt="A plate of cookies in the shape of the video game character Kirby." width="704" height="960">
 
         <h2>Description</h2>
